スタイルシートを compass を使って scss で書けるようにした 開発中は Tumblr でいちいちテンプレートファイルを更新するのがめんどうなのでローカル環境でサーバを立ち上げて編集したらすぐにブラウザで確認できるようにした

--- a/daigaku/html/template.html
+++ b/daigaku/html/template.html
@@ -36,7 +36,7 @@
       <meta property="og:url" content="{Permalink}" />
     {/block:PermalinkPage}
 
-    <link href="" rel="stylesheet" type="text/css" media="screen" charset="utf-8"/>
+    <link href="http://localhost:8000/daigaku/css/stylesheet.css" rel="stylesheet" type="text/css" media="screen" charset="utf-8"/>
     <style>
       {CustomCSS}
     </style>
